// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applies \`flex\` prop correctly 1`] = `
<div
  className={undefined}
  style={
    Object {
      "flex": 2,
    }
  }
/>
`;

exports[`renders correctly 1`] = `
<div
  className={undefined}
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;
